--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-</head>
+<Html>
+
+<Head>
+	<title> Alif Website </title>
+<link rel="stylesheet" href="Mycss.css">
+</Head>
+
+
+
+
+<style>
+	body {
+
+		background-color: cyan
+	}
+
+	.h1,span {
+		color: rgb(0, 26, 255);
+	}
+	#h2{
+		color: magenta;
+		background-color: black !important;
+	
+	}
+</style>
+
 <body>
-    <p> My Love</p>
+	<h1 class="myclass"> Muhammad Arman Alif </h1>
+	<a href="About_us.html" target="_blank">About_us</a> <br>
+	<a href="Contact_us.html">Contact_us</a> <br>
+	<a href="Pricing.html">Pricing</a> <br>
+	<a href="Services.html">Services</a>
+	<!-- <h3> I am a <mark> Freelancer </mark> </h3> -->
+	<!-- <h4> git bas, add, branch, commit </h4> -->
+	<h2 id="h2" style="color: cyan;background-color: #ff6543;"> Color theory </h2>
+	<!-- <h1 class="h1"> <Q>Color Theory</Q> হল কীভাবে রঙগুলি একসাথে কাজ করে এবং কীভাবে তারা আমাদের আবেগ এবং উপলব্ধিগুলিকে প্রভাবিত করে তার -->
+		অধ্যয়ন । </h1>
+
+
+	<span>
+		<p style="background-color:#ff6543;"> Color Theory </p>
+	</span>
+
+	<span style="background-color:#ff6543; font-size: 100px;" id="myid" > HTML QUOTATION</span>
+		<p>
+		<h1 class="h1">Git</h1> হলো একটি ফ্রি এবং ওপেন সোর্স <q><b> <u> <mark>Version Control System </mark> </u> </b></q> যার মাধ্যমে
+		আমাদের
+		কোন কোড বা কাজ কে একটা জায়গায় রাখতে পারি, প্রয়োজনে আগের কোন কোড দেখতে পারি, কোড মুছে দিতে পারি ইত্যাদি। আরেকটু
+		ক্লিয়ার করে বলা যাক। মনে করুন, আপনি আজকে ১টি কোড লিখলেন এবং কালকেও ১টি কোড লিখলনে। ৩ দিন পরে এসে আপনার মনে হলে
+		যে,
+		না আমার ঐ প্রথম দিনের কোডটি দরকার। সাধারনত ভাবে আপনি কি পারবেন বের করতে যে প্রথম কি কাজ করছিলনে ঐ একই ফাইলে? না
+		পারবনে না। কিন্তু আমরা যদি Git ব্যবহার করি তাহলে সহজেই যে কোন দিনের যে কোন কোড আমরা সহজেই বের করতে পারব। মানে
+		আমাদের
+		সকল কোডগুলোকে Version Control System করার একটি টুলই হচ্ছে এই git.</p>
+		<img src="Alif Image/1699154703087.jpg" alt="Alif Photo">
+		<p>
+		<h1>GitHub</h1> হল একটি লাভজনক কোম্পানি যা একটি ক্লাউড-ভিত্তিক গিট রিপোজিটরি হোস্টিং পরিষেবা অফার করে। মূলত, এটি
+		ব্যক্তি এবং দলের জন্য সংস্করণ নিয়ন্ত্রণ এবং সহযোগিতার জন্য Git ব্যবহার করা অনেক সহজ করে তোলে।
+
+		GitHub এর ইন্টারফেস যথেষ্ট ব্যবহারকারী-বান্ধব তাই এমনকি নবীন কোডাররাও গিট এর সুবিধা নিতে পারে। GitHub ছাড়া, Git
+		ব্যবহার করার জন্য সাধারণত একটু বেশি প্রযুক্তিগত জ্ঞান এবং কমান্ড লাইনের ব্যবহার প্রয়োজন।
+
+		গিটহাব এতটাই ব্যবহারকারী-বান্ধব, যদিও, কিছু লোক এমনকি বই লেখার মতো অন্যান্য ধরণের প্রকল্পগুলি পরিচালনা করতে
+		গিটহাব
+		ব্যবহার করে ।
+
+		উপরন্তু, যে কেউ সাইন আপ করতে পারে এবং বিনামূল্যে একটি পাবলিক কোড রিপোজিটরি হোস্ট করতে পারে, যা গিটহাবকে ওপেন
+		সোর্স
+		প্রকল্পগুলির সাথে বিশেষভাবে জনপ্রিয় করে তোলে।
+
+		একটি কোম্পানি হিসাবে, GitHub হোস্ট করা ব্যক্তিগত কোড সংগ্রহস্থল বিক্রি করে অর্থ উপার্জন করে, সেইসাথে অন্যান্য
+		ব্যবসা-কেন্দ্রিক পরিকল্পনা যা সংস্থাগুলির জন্য দলের সদস্যদের এবং নিরাপত্তা পরিচালনা করা সহজ করে তোলে। আমরা
+		অভ্যন্তরীণ প্রকল্পগুলি পরিচালনা এবং বিকাশ করতে কিনস্টাতে ব্যাপকভাবে গিথুব ব্যবহার করি।</p>
+		<p style="color:rgb(6, 64, 253)"> <br>Web Page <br> Home page <br> Web site <br> Web server <br> Search engine
+			<br>
+			Browser <br> Editor <br> <i> <strong> </strong>Static Website</i></strong></strong></i> <br> Dynamic website
+			<br> Responsive Website <br> Front End Development <br> Backend development <br> Full Stack development.
+		</p>
+
+		<a href="alif.com"> Alif Website </a>
+
+		<p style="background-color: rgb(238, 33, 6);">
+			This is Arman, I have 1 years + experience in this field.
+		</p>
 </body>
-</html>
+
+</Html>
