--- a/index.html
+++ b/index.html
@@ -3,75 +3,204 @@
 
 <Head>
 	<title> Alif Website </title>
-<link rel="stylesheet" href="Mycss.css">
+	<link rel="icon" type="image/x-icon" href="AlifImage/favicon.ico">
+	<link rel="stylesheet" href="Mycss.css">
+	<link rel="stylesheet" href="Contact_us.html">
+	<style>
+		body {
+	
+			background-color: cyan
+		}
+	
+	
+		
+		
+    table{
+		margin-top: 1px;
+		tr:hover {background-color: #ff6543;}
+		td:hover {background-color: #59ff43;}
+		border-radius: 20px;
+	}
+img {
+	float: right;
+	border: 9px solid rgb(119, 0, 255);
+	border-radius: 70px;	
+}
+
+.h1{
+		float: right;
+		color: #0f0101;
+		background-color: rgb(235, 9, 243);
+		border-radius: 20px;
+	}
+	ol{
+		/* color: #eb0d8f; */
+		border: #59ff43;
+		display: inline-block;
+		border-radius: 30px;
+		background-color: aliceblue;
+		color: #f70000;
+		width: 10%;
+	}
+ol:hover{
+	background-color: #190ae0;
+	color: #59ff43;
+	width: 8%;
+	display: inline-block;
+	border-radius: 50px;
+}
+h2 {
+	display: inline-block;
+	margin: 0;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 10;
+	border: 10px;
+	border-radius: 30px;
+	
+}
+a {
+	text-decoration: none;
+}
+	</style>
 </Head>
 
 
 
 
-<style>
-	body {
-
-		background-color: cyan
-	}
-
-	.h1,span {
-		color: rgb(0, 26, 255);
-	}
-	#h2{
-		color: magenta;
-		background-color: black !important;
-	
-	}
-</style>
 
 <body>
-	<h1 class="myclass"> Muhammad Arman Alif </h1>
-	<a href="About_us.html" target="_blank">About_us</a> <br>
-	<a href="Contact_us.html">Contact_us</a> <br>
-	<a href="Pricing.html">Pricing</a> <br>
-	<a href="Services.html">Services</a>
-	<!-- <h3> I am a <mark> Freelancer </mark> </h3> -->
-	<!-- <h4> git bas, add, branch, commit </h4> -->
-	<h2 id="h2" style="color: cyan;background-color: #ff6543;"> Color theory </h2>
-	<!-- <h1 class="h1"> <Q>Color Theory</Q> হল কীভাবে রঙগুলি একসাথে কাজ করে এবং কীভাবে তারা আমাদের আবেগ এবং উপলব্ধিগুলিকে প্রভাবিত করে তার -->
-		অধ্যয়ন । </h1>
+	<h2 class="myclass"> Muhammad Arman Alif </h2>
+	<h1 class="h1">My Photo</h1>
+	<img src="AlifImage/1699154703087-removebg-preview (1).png">
+	<h2>Home</h2>
+	<h2><a href="About_us.html" >About us</a> </h2>
+	<h2><a href="Contact_us.html">Contact us</a></h2>
+	<h2><a href="Pricing.html">Pricing</a> </h2>
+    <h2><a href="Services.html">Services</a></h2>
+	
+
+	<style>
+		table, th, td {
+		  border:1px solid rgb(231, 7, 7);
+		  text-align: center;
+		  align-items: center;
+		  color: #0011ff;
+		  font-size: larger;
+		  border-radius: 20px;
+		  margin: 100px;
+		}
+		
+		  </style>
+		<table align="center"
+		<tr>
+		  <th>Company Name</th>
+		  <th>Contact Name</th>
+		  <th>Country Name</th>
+		  <th>Contact Number</th>
+		</tr>
+		<tr>
+		  <td>Sales Grow Leads</td>
+		  <td>Muhammad Arman Alif</td>
+		  <td>Bangladesh</td>
+		  <th>01776484567</th>
+		</tr>
+		<tr>
+		  <td>Nactar</td>
+		  <td>Hasina</td>
+		  <td>Bangladesh</td>
+		  <th>0148227251558</th>
+		</tr>
+	  </table>
+
+	  <ol type="1" start="1">
+		<li><h2>Sajid</h2></li>
+		<li><h2>Alif</h2></li>
+		<li><h2>Mozammel</h2></li>
+		<li><h2>Tinni</h2></li>
 
 
-	<span>
-		<p style="background-color:#ff6543;"> Color Theory </p>
-	</span>
 
-	<span style="background-color:#ff6543; font-size: 100px;" id="myid" > HTML QUOTATION</span>
+	  </ol>
+	  <ol type="1" start="1">
+		<li><h2>Sajid</h2></li>
+		<li><h2>Alif</h2></li>
+		<li><h2>Mozammel</h2></li>
+		<li><h2>Tinni</h2></li>
+
+
+
+	  </ol>
+	  <ol type="1" start="1">
+		<li><h2>Sajid</h2></li>
+		<li><h2>Alif</h2></li>
+		<li><h2>Mozammel</h2></li>
+		<li><h2>Tinni</h2></li>
+
+
+
+	  </ol>
+	  <ol type="1" start="1">
+		<li><h2>Sajid</h2></li>
+		<li><h2>Alif</h2></li>
+		<li><h2>Mozammel</h2></li>
+		<li><h2>Tinni</h2></li>
+
+
+
+	  </ol>
+
+		<!-- <h3> I am a <mark> Freelancer </mark> </h3> -->
+		<!-- <h4> git bas, add, branch, commit </h4> -->
+		<h2 id="h2" style="color: cyan;background-color: #ff6543;"> Color theory </h2>
+		<!-- <h1 class="h1"> <Q>Color Theory</Q> হল কীভাবে রঙগুলি একসাথে কাজ করে এবং কীভাবে তারা আমাদের আবেগ এবং উপলব্ধিগুলিকে প্রভাবিত করে তার 
+		অধ্যয়ন ।--> </h1>
+
+
+		<span>
+			<p style="background-color:#ff6543;"> Color Theory </p>
+		</span>
+
+		<span style="background-color:#ff6543; font-size: 100px;" id="myid"> HTML QUOTATION</span>
 		<p>
-		<h1 class="h1">Git</h1> হলো একটি ফ্রি এবং ওপেন সোর্স <q><b> <u> <mark>Version Control System </mark> </u> </b></q> যার মাধ্যমে
-		আমাদের
-		কোন কোড বা কাজ কে একটা জায়গায় রাখতে পারি, প্রয়োজনে আগের কোন কোড দেখতে পারি, কোড মুছে দিতে পারি ইত্যাদি। আরেকটু
-		ক্লিয়ার করে বলা যাক। মনে করুন, আপনি আজকে ১টি কোড লিখলেন এবং কালকেও ১টি কোড লিখলনে। ৩ দিন পরে এসে আপনার মনে হলে
-		যে,
-		না আমার ঐ প্রথম দিনের কোডটি দরকার। সাধারনত ভাবে আপনি কি পারবেন বের করতে যে প্রথম কি কাজ করছিলনে ঐ একই ফাইলে? না
-		পারবনে না। কিন্তু আমরা যদি Git ব্যবহার করি তাহলে সহজেই যে কোন দিনের যে কোন কোড আমরা সহজেই বের করতে পারব। মানে
-		আমাদের
-		সকল কোডগুলোকে Version Control System করার একটি টুলই হচ্ছে এই git.</p>
-		<img src="Alif Image/1699154703087.jpg" alt="Alif Photo">
+			<h1 class="h1">Git</h1> হলো একটি ফ্রি এবং ওপেন সোর্স <q><b> <u> <mark>Version Control System </mark> </u>
+				</b></q> যার মাধ্যমে
+			আমাদের
+			কোন কোড বা কাজ কে একটা জায়গায় রাখতে পারি, প্রয়োজনে আগের কোন কোড দেখতে পারি, কোড মুছে দিতে পারি ইত্যাদি।
+			আরেকটু
+			ক্লিয়ার করে বলা যাক। মনে করুন, আপনি আজকে ১টি কোড লিখলেন এবং কালকেও ১টি কোড লিখলনে। ৩ দিন পরে এসে আপনার মনে
+			হলে
+			যে,
+			না আমার ঐ প্রথম দিনের কোডটি দরকার। সাধারনত ভাবে আপনি কি পারবেন বের করতে যে প্রথম কি কাজ করছিলনে ঐ একই ফাইলে?
+			না
+			পারবনে না। কিন্তু আমরা যদি Git ব্যবহার করি তাহলে সহজেই যে কোন দিনের যে কোন কোড আমরা সহজেই বের করতে পারব।
+			মানে
+			আমাদের
+			সকল কোডগুলোকে Version Control System করার একটি টুলই হচ্ছে এই git.
+		</p>
+		
 		<p>
-		<h1>GitHub</h1> হল একটি লাভজনক কোম্পানি যা একটি ক্লাউড-ভিত্তিক গিট রিপোজিটরি হোস্টিং পরিষেবা অফার করে। মূলত, এটি
-		ব্যক্তি এবং দলের জন্য সংস্করণ নিয়ন্ত্রণ এবং সহযোগিতার জন্য Git ব্যবহার করা অনেক সহজ করে তোলে।
+			<h1>GitHub</h1> হল একটি লাভজনক কোম্পানি যা একটি ক্লাউড-ভিত্তিক গিট রিপোজিটরি হোস্টিং পরিষেবা অফার করে। মূলত,
+			এটি
+			ব্যক্তি এবং দলের জন্য সংস্করণ নিয়ন্ত্রণ এবং সহযোগিতার জন্য Git ব্যবহার করা অনেক সহজ করে তোলে।
 
-		GitHub এর ইন্টারফেস যথেষ্ট ব্যবহারকারী-বান্ধব তাই এমনকি নবীন কোডাররাও গিট এর সুবিধা নিতে পারে। GitHub ছাড়া, Git
-		ব্যবহার করার জন্য সাধারণত একটু বেশি প্রযুক্তিগত জ্ঞান এবং কমান্ড লাইনের ব্যবহার প্রয়োজন।
+			GitHub এর ইন্টারফেস যথেষ্ট ব্যবহারকারী-বান্ধব তাই এমনকি নবীন কোডাররাও গিট এর সুবিধা নিতে পারে। GitHub ছাড়া,
+			Git
+			ব্যবহার করার জন্য সাধারণত একটু বেশি প্রযুক্তিগত জ্ঞান এবং কমান্ড লাইনের ব্যবহার প্রয়োজন।
 
-		গিটহাব এতটাই ব্যবহারকারী-বান্ধব, যদিও, কিছু লোক এমনকি বই লেখার মতো অন্যান্য ধরণের প্রকল্পগুলি পরিচালনা করতে
-		গিটহাব
-		ব্যবহার করে ।
+			গিটহাব এতটাই ব্যবহারকারী-বান্ধব, যদিও, কিছু লোক এমনকি বই লেখার মতো অন্যান্য ধরণের প্রকল্পগুলি পরিচালনা করতে
+			গিটহাব
+			ব্যবহার করে ।
 
-		উপরন্তু, যে কেউ সাইন আপ করতে পারে এবং বিনামূল্যে একটি পাবলিক কোড রিপোজিটরি হোস্ট করতে পারে, যা গিটহাবকে ওপেন
-		সোর্স
-		প্রকল্পগুলির সাথে বিশেষভাবে জনপ্রিয় করে তোলে।
+			উপরন্তু, যে কেউ সাইন আপ করতে পারে এবং বিনামূল্যে একটি পাবলিক কোড রিপোজিটরি হোস্ট করতে পারে, যা গিটহাবকে ওপেন
+			সোর্স
+			প্রকল্পগুলির সাথে বিশেষভাবে জনপ্রিয় করে তোলে।
 
-		একটি কোম্পানি হিসাবে, GitHub হোস্ট করা ব্যক্তিগত কোড সংগ্রহস্থল বিক্রি করে অর্থ উপার্জন করে, সেইসাথে অন্যান্য
-		ব্যবসা-কেন্দ্রিক পরিকল্পনা যা সংস্থাগুলির জন্য দলের সদস্যদের এবং নিরাপত্তা পরিচালনা করা সহজ করে তোলে। আমরা
-		অভ্যন্তরীণ প্রকল্পগুলি পরিচালনা এবং বিকাশ করতে কিনস্টাতে ব্যাপকভাবে গিথুব ব্যবহার করি।</p>
+			একটি কোম্পানি হিসাবে, GitHub হোস্ট করা ব্যক্তিগত কোড সংগ্রহস্থল বিক্রি করে অর্থ উপার্জন করে, সেইসাথে
+			অন্যান্য
+			ব্যবসা-কেন্দ্রিক পরিকল্পনা যা সংস্থাগুলির জন্য দলের সদস্যদের এবং নিরাপত্তা পরিচালনা করা সহজ করে তোলে। আমরা
+			অভ্যন্তরীণ প্রকল্পগুলি পরিচালনা এবং বিকাশ করতে কিনস্টাতে ব্যাপকভাবে গিথুব ব্যবহার করি।
+		</p>
 		<p style="color:rgb(6, 64, 253)"> <br>Web Page <br> Home page <br> Web site <br> Web server <br> Search engine
 			<br>
 			Browser <br> Editor <br> <i> <strong> </strong>Static Website</i></strong></strong></i> <br> Dynamic website
