--- a/Pricing.html
+++ b/Pricing.html
@@ -22,6 +22,7 @@
             padding: 30px;
             border: 10px solid rgb(5, 5, 105);
             margin: 5px;
+            border-radius: 40px;
         }
 
         h1,
