--- a/Pricing.html
+++ b/Pricing.html
@@ -5,14 +5,16 @@
     <title> Pricing </title>
     <style>
         body {
-            background-color: rgb(5, 5, 105);
+            background-color: cyan;
         }
 
         table {
             padding: 50px;
+            align-items: center;
+            
         }
         .heading{
-            color: white;
+            color: rgb(8, 1, 1);
             margin-top: 100px;
         }
 
@@ -20,11 +22,15 @@
             background-color: rgb(12, 8, 255);
             color: white;
             padding: 30px;
-            border: 10px solid rgb(5, 5, 105);
-            margin: 5px;
             border-radius: 40px;
+          border: 20px solid white;
+            margin-left: 300px;
         }
-
+    tr{
+    /* margin: 500px;
+    padding: auto; */
+    margin-left: 500px;
+}
         h1,
         h3 {
             text-align: center;
@@ -34,20 +40,23 @@
         p {
             text-align: center;
             border: 1px solid red;
-            padding: 10px 30px;
+            padding:auto;
             color: white;
-            border-radius: 5px;
+            border-radius: 10px;
         }
         p:hover{
             background-color: blueviolet;
 
         }
+        ul{
+            align-items: center;
+        }
     </style>
 </head>
 
 <body>
-    <h1 class="heading"> Choose Your Plan </h1>
-    <table align="center"
+    <h1 class="heading" id="java"> Choose Your Plan </h1>
+    <table align="center">
         <tr>
             <td>
                 <h1>Starter</h1>
@@ -100,7 +109,9 @@
 
         </tr>
 
-
+<script>
+    document.getElementById("java") .style="text-align:center; color: red"
+</script>
 </body>
 
 </html>
