--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@ h2 {
 a {
 	text-decoration: none;
 }
+	table, th, td {
+		  border:1px solid rgb(231, 7, 7);
+		  text-align: center;
+		  align-items: center;
+		  color: #0011ff;
+		  font-size: larger;
+		  border-radius: 20px;
+		  margin: 100px;
+		}
+
 	</style>
 </Head>
 
@@ -74,25 +84,15 @@ a {
 	<h1 class="h1">My Photo</h1>
 	<img src="AlifImage/1699154703087-removebg-preview (1).png">
 	<h2>Home</h2>
-	<h2><a href="About_us.html" >About us</a> </h2>
-	<h2><a href="Contact_us.html">Contact us</a></h2>
-	<h2><a href="Pricing.html">Pricing</a> </h2>
-    <h2><a href="Services.html">Services</a></h2>
+	<h2><a href="About_us.html" target="myfram" >About us</a> </h2>
+	<h2><a href="Contact_us.html" target="myfram">Contact us</a></h2>
+	<h2><a href="Pricing.html" target="myfram">Pricing</a> </h2>
+    <h2><a href="Services.html" target="myfram">Services</a></h2>
 	
-
-	<style>
-		table, th, td {
-		  border:1px solid rgb(231, 7, 7);
-		  text-align: center;
-		  align-items: center;
-		  color: #0011ff;
-		  font-size: larger;
-		  border-radius: 20px;
-		  margin: 100px;
-		}
-		
-		  </style>
-		<table align="center"
+	
+	<iframe src="About_us.html" name="myfram" style="width: 100%; height: 600px;border:none"></iframe>
+	
+		<table align="center">
 		<tr>
 		  <th>Company Name</th>
 		  <th>Contact Name</th>
