--- a/Services.html
+++ b/Services.html
@@ -71,14 +71,15 @@
 
         p {
             border: 2px solid rgb(0, 26, 255);
-            border-radius: 10px;
+            border-radius: 20px;
             text-align: center;
             padding: 10px 30px;
             color: blue;
+            background-color: rgb(21, 255, 216);
         }
 
         p:hover {
-            background-color: rgb(29, 240, 134);
+            background-color: rgb(198, 29, 240);
         }
 
         h1 {
@@ -112,7 +113,7 @@
             <li>Basic Web Builder</li>
             <li>No SSL Certificate</li>
             <li>Limited Support</li>
-            <p>Add To Cart</p>
+            <h3><p>Add To Cart</p></h3>
         </ul>
     </div>
     <div class="child1">
@@ -125,7 +126,7 @@
             <li>Contact List Building</li>
             <li>Lead List</li>
             <li>Ready List</li>
-            <p>Add To Cart</p>
+            <h3><p>Add To Cart</p></h3>
         </ul>
     </div>
     <div class="child0">
@@ -139,7 +140,7 @@
             <li>Lead Generation</li>
             <li>Manage a Website</li>
             <li>Web Research</li>
-            <p>Add To Cart</p>
+            <h3><p>Add To Cart</p></h3>
         </ul>
     </div>
 
