--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ a {
 	<h2><a href="Contact_us.html" target="myfram">Contact us</a></h2>
 	<h2><a href="Pricing.html" target="myfram">Pricing</a> </h2>
     <h2><a href="Services.html" target="myfram">Services</a></h2>
+	<h2><a href="e-commercce table.html" target="myfram">Product Listing</a></h2>
 	
 	
 	<iframe src="About_us.html" name="myfram" style="width: 100%; height: 600px;border:none"></iframe>
@@ -153,8 +154,8 @@ a {
 		<!-- <h3> I am a <mark> Freelancer </mark> </h3> -->
 		<!-- <h4> git bas, add, branch, commit </h4> -->
 		<h2 id="h2" style="color: cyan;background-color: #ff6543;"> Color theory </h2>
-		<!-- <h1 class="h1"> <Q>Color Theory</Q> হল কীভাবে রঙগুলি একসাথে কাজ করে এবং কীভাবে তারা আমাদের আবেগ এবং উপলব্ধিগুলিকে প্রভাবিত করে তার 
-		অধ্যয়ন ।--> </h1>
+		<h3> <Q>Color Theory</Q> হল কীভাবে রঙগুলি একসাথে কাজ করে এবং কীভাবে তারা আমাদের আবেগ এবং উপলব্ধিগুলিকে প্রভাবিত করে তার 
+		অধ্যয়ন । </h3>
 
 
 		<span>
